samples/_failures_safe/1761004474_19cfdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79c3fe60.c: In function ‘main’:
./samples/SAFE/__tmp_79c3fe60.c:165:5: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  165 |     size
      |     ^~~~
      |     size_t
./samples/SAFE/__tmp_79c3fe60.c:165:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_79c3fe60.c:165:9: error: expected ‘;’ at end of input
  165 |     size
      |         ^
      |         ;
./samples/SAFE/__tmp_79c3fe60.c:165:5: error: expected declaration or statement at end of input
  165 |     size
      |     ^~~~
